Implementado el cambio de bebidas

--- a/index.html
+++ b/index.html
@@ -26,12 +26,31 @@
     <section class="inicio" id="inicio">
         <div class="inicio-text">
             <span>Bienvenido a</span>
-            <h1>Starbucks Coffee</h1>
-            <h2>El cafe gratis esta a <br>un toque de distancia</h2>
+            <h1 id="titulo">Starbucks Coffee</h1>
+            <h2 id="titulo2">El cafe gratis esta a <br>un toque de distancia</h2>
             <a href="#" class="btn">Unete ahora</a>
         </div>
         <div class="inicio-img">
             <img src="img/home.png" alt="">
+        </div>
+        <div class="redes-sociales">
+            <a href="https://www.facebook.com/StarbucksColombia/?locale=es_LA" class="red-social"><i
+                    class="bx bxl-facebook"></i></a>
+            <a href="https://twitter.com/Starbucks" class="red-social"><i class="bx bxl-twitter"></i></a>
+            <a href="https://www.instagram.com/starbuckscol/?hl=es" class="red-social"><i
+                    class="bx bxl-instagram"></i></a>
+        </div>
+        <div class="caja_fijada">
+            <img src="img/shop1.png" alt="" id="caja1" style="width: 65px; height: 100px;">
+            <img src="img/shop2.png" alt="" id="caja2" style="width: 105px; height: 110px;">
+            <img src="img/shop3.png" alt="" id="caja3" style="width: 65px; height: 100px;">
+        </div>
+        <div class="caja_derecha">
+            <div class="caja_derecha_centro">
+                <img src="img/shop1.png" alt="" id="caja_img1" style="display: block;">
+                <img src="img/shop2.png" alt="" id="caja_img2" style="display: none;">
+                <img src="img/shop3.png" alt="" id="caja_img3" style="display: none;">
+            </div>
         </div>
     </section>
 
@@ -72,7 +91,6 @@
                 <span>$ 15.999</span>
                 <a href="#" class="btn">Ordenar Ahora</a>
             </div>
-
             <div class="box">
                 <div class="box-img">
                     <img src="img/shop3.png" alt="">
@@ -147,10 +165,10 @@
 
     <section class="contacto" id="contacto">
         <div class="social">
-            <a href="#"><i class="bx bxl-facebook"></i></a>
-            <a href="#"><i class="bx bxl-twitter"></i></a>
-            <a href="#"><i class="bx bxl-instagram"></i></a>
-            <a href="#"><i class="bx bxl-youtube"></i></a>
+            <a href="https://www.facebook.com/StarbucksColombia/?locale=es_LA"><i class="bx bxl-facebook"></i></a>
+            <a href="https://twitter.com/Starbucks"><i class="bx bxl-twitter"></i></a>
+            <a href="https://www.instagram.com/starbuckscol/?hl=es"><i class="bx bxl-instagram"></i></a>
+            <a href="https://www.youtube.com/@starbucks"><i class="bx bxl-youtube"></i></a>
         </div>
         <div class="links">
             <a href="#">Politicas de Privacidad</a>
